<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.qrmaster.GenerateActivity"
        android:gravity="center_horizontal"
        android:background="#1E80E9"
        android:theme="@style/AppTheme.NoActionBar"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <RelativeLayout
                    android:padding="16dp"
                    android:background="@drawable/text_edit_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">

                <TextView
                        android:text="@string/_0_2950"
                        android:textSize="14sp"
                        android:layout_marginLeft="32dp"
                        android:background="@null"
                        android:gravity="bottom|end"
                        android:textColor="#9EFFFFFF"
                        android:id="@+id/_editTextCounter"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:layout_marginStart="32dp"
                        tools:ignore="RtlHardcoded"/>

                <ImageView
                        android:src="@drawable/ic_text_fields_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/text_icon"/>

                <EditText
                        android:hint="@string/type_your_text"
                        android:textColorHint="#80FFFFFF"
                        android:layout_marginLeft="32dp"
                        android:layout_marginBottom="16dp"
                        android:background="@null"
                        android:gravity="top|start"
                        android:textColor="#fff"
                        android:id="@+id/_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="32dp"
                        tools:ignore="Autofill,RtlHardcoded"
                        android:inputType="textCapSentences"/>

                </RelativeLayout>

        </LinearLayout>

        <ImageButton
                android:background="@drawable/red_ripple_bg"
                android:layout_margin="20dp"
                android:padding="60dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_create"
                android:scaleType="centerCrop"
                android:id="@+id/_buttonGenerate"
                android:contentDescription="@string/create_qr"/>

    </LinearLayout>

    <TextView
            android:text="@string/powered_by_richard_anca"
            android:textColor="#5BFFFFFF"
            android:gravity="end|bottom"
            android:padding="4dp"
            android:textSize="8sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:ignore="SmallSp"/>


</android.support.constraint.ConstraintLayout>